# repo_guide_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: agent.yaml  skills.yaml  tools.yaml
docs/: architecture.md  evaluation.md  failure_cases.md  question_driven_workflow_blueprint.md  skill_design.md  spec_differences.md
prompts/: common_output_format.md  router.md
prompts/skills/: explain_module.md  find_entrypoints.md  generate_reading_plan.md  investigate_question.md  summarize_repo.md  trace_symbol.md
prompts/system/: query_parser.md  response_formatter.md  skill_agent.md  synthesize_answer.md  verify_answer.md
scripts/: prepare_repo.py  run_eval.py
src/: __init__.py  errors.py  main.py  progress_reporter.py  terminal_renderer.py
src/agent/: context.py  executor.py  logger.py  query_parser.py  response_formatter.py  router.py  workflow_state.py
src/llm/: client.py
src/parsers/: dependency_parser.py  language_detector.py  readme_parser.py
src/prompting/: __init__.py  builders.py  loader.py
src/schemas/: response_models.py  skill_io.py  tool_io.py  user_io.py
src/skills/: base.py  explain_module.py  find_entrypoints.py  generate_reading_plan.py  investigate_question.py  summarize_repo.py  (+3 more)
tests/: test_cli_renderer.py  test_find_entrypoints.py  test_main_cli.py  test_progress_reporter.py  test_query_parser.py  test_repo_toolkit.py  test_repo_walk.py  test_response_formatter.py  test_router.py  test_summarize_repo.py  test_terminal_renderer.py  test_tools.py  test_trace_symbol.py  test_verbose_cli.py
(+10 files in other folders)
